moved css and javascript to separate files, but some are still needed to be moved

--- a/src/Presentation/Views/EmployeeAccount/ResetPassword.cshtml
+++ b/src/Presentation/Views/EmployeeAccount/ResetPassword.cshtml
@@ -46,22 +46,8 @@
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
+    <script src="~/js/Shared/passwordToggle.js"></script>
     <script>
-        function togglePasswordVisibility(passwordInputId, toggleButtonId) {
-            var passwordInput = document.getElementById(passwordInputId);
-            var toggleButton = document.getElementById(toggleButtonId);
-
-            toggleButton.addEventListener('click', function () {
-                if (passwordInput.type === 'password') {
-                    passwordInput.type = 'text';
-                    toggleButton.textContent = 'Hide';
-                } else {
-                    passwordInput.type = 'password';
-                    toggleButton.textContent = 'Show';
-                }
-            });
-        }
-
         // Call the function for both password fields
         togglePasswordVisibility('newPassword', 'toggleNewPassword');
         togglePasswordVisibility('repeatPassword', 'toggleRepeatPassword');
