--- a/src/Presentation/Views/EmployeeManagement/Profile.cshtml
+++ b/src/Presentation/Views/EmployeeManagement/Profile.cshtml
@@ -165,48 +165,15 @@
     </div>
 </div>
 
-<!-- Action Confirmation Modal -->
-<div class="modal fade" id="actionModal" tabindex="-1" aria-labelledby="actionModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="actionModalLabel">Confirm @userAction</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <div class="modal-body">
-                Are you sure you want to @userAction this employee?
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-                <button type="button" class="btn @actionButtonClass" id="confirmAction">@userAction</button>
-            </div>
-        </div>
-    </div>
-</div>
+
+@await Html.PartialAsync("_ActionConfirmationModalPartial", new Nika1337.Library.Presentation.Models.ActionConfirmationModalViewModel(userAction, actionButtonClass, "Employee"));
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
+    <script src="~/js/Shared/ActionModal.js"></script>
+    <script src="~/js/EmployeeManagement/Profile.js"></script>
     <script>
-        (function () {
-            'use strict';
-
-            document.getElementById('confirmAction').addEventListener('click', function () {
-                var username = '@username';
-                var token = document.querySelector('input[name="__RequestVerificationToken"]').value;
-                fetch(`/EmployeeManagement/@(userAction)Employee/${username}`, {
-                    method: 'POST',
-                    headers: {
-                        'Content-Type': 'application/json',
-                        'RequestVerificationToken': token
-                    }
-                }).then(response => {
-                    if (response.ok) {
-                        window.location.href = '/EmployeeManagement/AllEmployees';
-                    } else {
-                        alert('An error occurred while trying to @userAction the employee.');
-                    }
-                });
-            });
-        })();
+        var username = '@username';
+        var userAction = '@userAction';
     </script>
 }
