renamed PasswordToggle.js and moved Nav bar javascript to separate file

--- a/src/Presentation/Views/Shared/_Layout.cshtml
+++ b/src/Presentation/Views/Shared/_Layout.cshtml
@@ -1,55 +1,30 @@
 ﻿
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"]</title>
+    <head>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>@ViewData["Title"]</title>
 
 
-    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/css/custom_bootstrap.css" asp-append-version="true" />
-    @RenderSection("Styles", required: false)
-</head>
-<body>
-    <header>
-        @await Component.InvokeAsync("Navigation")
-    </header>
-    <main role="main" class="pb-3">
-        @RenderBody()
-    </main>
+        <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+        <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
+        <link rel="stylesheet" href="~/css/custom_bootstrap.css" asp-append-version="true" />
+        @RenderSection("Styles", required: false)
+    </head>
+    <body>
+        <header>
+            @await Component.InvokeAsync("Navigation")
+        </header>
+        <main role="main" class="pb-3">
+            @RenderBody()
+        </main>
 
 
-    <script src="~/lib/jquery/dist/jquery.min.js"></script>
-    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="~/js/site.js" asp-append-version="true"></script>
-    @RenderSection("Scripts", required: false)
-</body>
+        <script src="~/lib/jquery/dist/jquery.min.js"></script>
+        <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+        <script src="~/js/site.js" asp-append-version="true"></script>
+        <script src="~/js/Shared/Navigation.js"></script>
+        @RenderSection("Scripts", required: false)
+    </body>
 </html>
-
-<script>
-    $(document).ready(function () {
-        // Show dropdown on hover
-        $('.nav-item.dropdown').hover(function () {
-            $(this).children('.dropdown-menu').addClass('show');
-        }, function () {
-            $(this).children('.dropdown-menu').removeClass('show');
-        });
-
-        // Show nested dropdown on hover
-        $('.dropdown-submenu').hover(function () {
-            $(this).children('.dropdown-menu').addClass('show');
-        }, function () {
-            $(this).children('.dropdown-menu').removeClass('show');
-        });
-
-        // Handle click to navigate
-        $('a.nav-link, a.dropdown-item').click(function (event) {
-            var targetUrl = $(this).attr('href');
-            if (targetUrl && targetUrl !== '#' && targetUrl !== 'undefined') {
-                window.location.href = targetUrl;
-            }
-        });
-    });
-</script>
