--- a/src/Presentation/Views/EmployeeManagement/RegisterEmployee.cshtml
+++ b/src/Presentation/Views/EmployeeManagement/RegisterEmployee.cshtml
@@ -16,7 +16,7 @@
     <div class="card" style="width: 100%; max-width: 1000px;">
         <h5 class="card-header">@ViewData["Title"]</h5>
         <div class="card-body">
-            <form asp-action="RegisterEmployee" asp-controller="EmployeeManagement" method="post" class="needs-validation" novalidate>
+            <form asp-route="Employees/RegisterEmployee" method="post" class="needs-validation" novalidate>
                 <div class="row">
                     <div class="col-md-6 mb-3">
                         <div class="form-group">
