updated routes of various things to suit new route changes

--- a/src/Presentation/Views/Shared/EmailSuccessfullyConfirmed.cshtml
+++ b/src/Presentation/Views/Shared/EmailSuccessfullyConfirmed.cshtml
@@ -13,7 +13,7 @@
                 <div class="card-body text-center">
                     <p>An email has been successfully sent to your inbox. Please check your email for further instructions.</p>
                     <p>If you do not see the email, please check your spam or junk folder.</p>
-                    <a href="~/Home/Index" class="btn btn-dark">Return to Home</a>
+                    <a href="/" class="btn btn-dark">Return to Home</a>
                 </div>
             </div>
         </div>
