--- a/src/Presentation/Views/Shared/SomethingWentWrong.cshtml
+++ b/src/Presentation/Views/Shared/SomethingWentWrong.cshtml
@@ -11,6 +11,6 @@
         <p class="lead">
             Unexpected Error Occured!
         </p>
-        <a asp-controller="Home" asp-action="Index" class="btn btn-primary">Go Home</a>
+        <a href="/" class="btn btn-primary">Go Home</a>
     </div>
 </div>
