--- a/src/Presentation/Views/EmailTemplates/EmailTemplates.cshtml
+++ b/src/Presentation/Views/EmailTemplates/EmailTemplates.cshtml
@@ -3,6 +3,8 @@
 @{
     ViewData["Title"] = "Email Templates";
 
+    var stringId = (string)ViewContext.RouteData.Values["id"]!;
+    var id = int.Parse(stringId);
     var userAction = Model.SelectedEmailTemplate?.DeletedDate == null ? "Delete" : "Renew";
     var actionButtonClass = Model.SelectedEmailTemplate?.DeletedDate == null ? "btn-danger" : "btn-warning";
 }
@@ -15,7 +17,7 @@
                 <div class="list-group list-group-flush border-bottom scrollarea">
                     @foreach (var template in Model.EmailTemplates)
                     {
-                        <a asp-controller="Operations" asp-action="EmailTemplates" asp-route-id="@template.Id" class="list-group-item list-group-item-action @(Model.SelectedEmailTemplate != null && Model.SelectedEmailTemplate.Id == template.Id ? "active" : "") py-3 lh-tight w-100">
+                        <a href="/Operations/EmailTemplates/@template.Id" class="list-group-item list-group-item-action @(Model.SelectedEmailTemplate != null && id == template.Id ? "active" : "") py-3 lh-tight w-100">
                             <div class="d-flex justify-content-between">
                                 <div class="row">
                                     <h5 class="mb-1">@template.Name</h5>
@@ -52,7 +54,7 @@
                         <div class="list-group list-group-flush border-bottom scrollarea">
                             @foreach (var template in Model.EmailTemplates)
                             {
-                                <a asp-controller="Operations" asp-action="EmailTemplates" asp-route-id="@template.Id" class="list-group-item list-group-item-action @(Model.SelectedEmailTemplate != null && Model.SelectedEmailTemplate.Id == template.Id ? "active" : "") py-3 lh-tight w-100">
+                                <a href="/Operations/EmailTemplates/@template.Id" class="list-group-item list-group-item-action @(Model.SelectedEmailTemplate != null && id == template.Id ? "active" : "") py-3 lh-tight w-100">
                                     <div class="d-flex justify-content-between align-items-center">
                                         <div>
                                             <h5 class="mb-1">@template.Name</h5>
@@ -87,8 +89,7 @@
                     </div>
                 }
             </div>
-            <form asp-controller="Operations" asp-action="EmailTemplates" asp-route-itemid="@Model.SelectedEmailTemplate.Id" method="post">
-                <input type="hidden" asp-for="SelectedEmailTemplate.Id" />
+            <form asp-route="/Operations/EmailTemplates/@id" method="post">
                 <div class="row mb-3">
                     <div class="col-md-6">
                         <div class="form-group">
@@ -168,7 +169,7 @@
     <script src="~/js/Shared/ActionModal.js"></script>
     <script src="~/js/Operations/EmailTemplates.js"></script>
     <script>
-        var id = @Model.SelectedEmailTemplate.Id;
+        var id = "@id";
         var userAction = "@userAction";
     </script>
 }
