--- a/src/Presentation/Views/EmployeeAccount/ResetPassword.cshtml
+++ b/src/Presentation/Views/EmployeeAccount/ResetPassword.cshtml
@@ -18,7 +18,7 @@
                             </div>
                         }
                         <input type="hidden" asp-for="Token" />
-                        <input type="hidden" asp-for="Username" />
+                        <input type="hidden" asp-for="Id" />
                         <div class="mb-3">
                             <label asp-for="NewPassword" class="form-label"></label>
                             <div class="input-group">
