--- a/src/Presentation/Views/Shared/Error.cshtml
+++ b/src/Presentation/Views/Shared/Error.cshtml
@@ -10,7 +10,7 @@
         <p class="lead">
             The page you’re looking for doesn’t exist.
         </p>
-        <a asp-controller="Home" asp-action="Index" class="btn btn-primary">Go Home</a>
+        <a href="/" class="btn btn-primary">Go Home</a>
     </div>
 </div>
 
