--- a/src/Presentation/Views/Shared/_LoginPartial.cshtml
+++ b/src/Presentation/Views/Shared/_LoginPartial.cshtml
@@ -4,30 +4,28 @@
 @if (Context?.User?.Identity?.IsAuthenticated == true)
 {
     <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle d-flex justify-content-end align-items-center" asp-controller="EmployeeAccount" asp-action="Profile" style="min-width: 150px">
+        <a class="nav-link dropdown-toggle d-flex justify-content-end align-items-center" href="/EmployeeAccount/Profile" style="min-width: 150px">
             @Context?.User?.Identity?.Name
         </a>
         <ul class="dropdown-menu dropdown-menu-dark dropdown-menu-end dropdown-menu-lg-start">
             <li>
-                <a class="dropdown-item" asp-controller="EmployeeAccount" asp-action="Profile">
+                <a class="dropdown-item" href="/EmployeeAccount/Profile">
                     Profile
                 </a>
             </li>
             <li>
-                <a class="dropdown-item" asp-controller="EmployeeAccount" asp-action="ChangePassword">
+                <a class="dropdown-item" href="/EmployeeAccount/ChangePassword">
                     Change Password
                 </a>
             </li>
             <li>
-                <a class="dropdown-item" asp-controller="EmployeeAccount" asp-action="ChangeEmail">
+                <a class="dropdown-item" href="/EmployeeAccount/ChangeEmail">
                     Change Email
                 </a>
             </li>
             <li><hr class="dropdown-divider"></li>
             <li>
-                <form asp-controller="EmployeeAccount" asp-action="SignOut" method="post" class="form-inline">
-                    <button type="submit" class="btn btn-link dropdown-item" style="color: red;">Sign Out</button>
-                </form>
+                <a href="/EmployeeAccount/SignOut" class="btn btn-link dropdown-item" style="color: red;">Sign Out</a>
             </li>
         </ul>
     </li>
