--- a/src/Presentation/Views/EmployeeManagement/Profile.cshtml
+++ b/src/Presentation/Views/EmployeeManagement/Profile.cshtml
@@ -78,6 +78,7 @@
                 <h5 class="card-header">Employee Information</h5>
                 <div class="card-body">
                     <form asp-route="Employees/Profile" method="post" class="needs-validation" novalidate>
+                        <input type="hidden" asp-for="Id" />
                         <div class="row">
                             <div class="col-md-6 mb-3">
                                 <div class="form-group">
@@ -98,9 +99,9 @@
                         <div class="row">
                             <div class="col-md-6 mb-3">
                                 <div class="form-group">
-                                    <label asp-for="NewUsername"></label>
-                                    <input asp-for="NewUsername" class="form-control" />
-                                    <span asp-validation-for="NewUsername" class="text-danger"></span>
+                                    <label asp-for="Username"></label>
+                                    <input asp-for="Username" class="form-control" />
+                                    <span asp-validation-for="Username" class="text-danger"></span>
                                 </div>
                             </div>
 
