i think refactoring is done, everything works correctly, and code looks much better, and is following Clean Code principles well. Performance got much better, because we dont need round trips to database to get roles of user, and getting employees navigation items is faster too. Mapping became much easier, no need to write some custom and complicated mapping for employee to IdentityEmployee. Last important change is that Employee  And EmployeeRole Domain entities arent necessary, since they had no references, because IdentityEmployee is persisted, and communication with service happens with dtos.

--- a/src/Presentation/Views/EmailTemplates/EmailTemplates.cshtml
+++ b/src/Presentation/Views/EmailTemplates/EmailTemplates.cshtml
@@ -89,7 +89,9 @@
                     </div>
                 }
             </div>
-            <form asp-route="/Operations/EmailTemplates/@id" method="post">
+            <form asp-route="/Operations/EmailTemplates" method="post">
+                <input type="hidden" asp-for="SelectedEmailTemplate.Id" />
+
                 <div class="row mb-3">
                     <div class="col-md-6">
                         <div class="form-group">
